tests/fixtures/invalid/hex_bytes.py
# Cannot call hex() with Bytes
x = hex(b"hello")
